--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@
     text-align: center;
     font-size: 24px;
     background-color: var(--dark_orng);
-    color: #fff;
+    color: var(--black);
 }
 .box2{
     height: 150px;
@@ -146,9 +146,9 @@
     .orangebttn{
         padding: 10px;
         border-radius: 4px;
-        background-color:var(--dark_orng);
+        background-color:var(--dark_bg);
         border: transparent;
-        color: white;
+        color: var(--white_bg);
         font-size: 1.1em;
         font-family: roboto,sans-serif;
     }
